<resources>
    <string name="app_name">잊지말개</string>
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="title">계정 이름</string>
    <string name="subtitle">Subtitle</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>

    <string name="join_alarm">비밀번호를 잃어버린 경우 다시 되찾을 수 없습니다.</string>
    <string name="user_info_saved">정상적으로 저장되었습니다.</string>
    <string name="confirm">확인</string>
    <string name="my_accounts">My Accounts</string>
    <string name="item">Item</string>
    <string name="modify">Modify</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_profile">My Profile</string>
    <string name="add_account">Add Account</string>
    <string name="modify_account">Modify Account</string>
    <string name="create">생성</string>
    <string name="hint">hint</string>
    <string name="search">Search</string>
    <string name="filePath">파일 경로</string>
    <string name="value">Value</string>

    <!-- note. Switch Service -->
    <string name="switch_api_server_url">http://121.130.15.124:9090/</string>
    <string name="secret_key">d3FfeHw1B22F@RRuSrDdRS6DQ@CrUQmza7dz$Gkun$^rNRcj^DQB1k5kwTu9</string>

</resources>