<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MyActivity">

    <RelativeLayout
        android:id="@+id/myActivity__container"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/myActivity__header__container"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/myActivity__header__avatar"
                android:src="@drawable/user_004"
                android:scaleType="fitXY"
                android:background="@null"
                android:layout_centerHorizontal="true"
                android:layout_width="140dp"
                android:layout_height="140dp"/>

            <TextView
                android:id="@+id/myActivity__header__username"
                android:text="@string/username"
                android:textSize="27sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_below="@+id/myActivity__header__avatar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/myActivity__body__container"
            android:layout_below="@+id/myActivity__header__container"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/myActivity__body__nickname_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/myActivity__body__nickname_label"
                    android:text="@string/nickname"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/myActivity__body__nickname_edit"
                    android:layout_toEndOf="@+id/myActivity__body__nickname_label"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/myActivity__footer__container"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/myActivity__footer__btn_save"
                android:text="@string/save"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/gradation_my_save"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/myActivity__footer__btn_signOut"
                android:text="@string/sign_out"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/gradation_my_sign_out"
                android:layout_below="@+id/myActivity__footer__btn_save"
                android:layout_marginTop="10dp"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>