<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/accountListItem__container"
        android:background="@drawable/gradation_item01"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/accountListItem__header__container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/accountListItem__header__title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/accountListItem__footer__hint"
                android:text="@string/hint"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/accountListItem__body__container"
            android:layout_below="@+id/accountListItem__header__container"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/accountListItem__body__image_container"
                android:layout_marginTop="10dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/accountListItem__body__image_thumbnail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/user_004" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/accountListItem__body__text__container"
                android:layout_toEndOf="@+id/accountListItem__body__image_container"
                android:layout_toStartOf="@+id/accountListItem__body__option__container"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/accountListItem__body__text__id"
                    android:text="@string/id"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/accountListItem__body__text__pw"
                    android:text="@string/pw"
                    android:textSize="14sp"
                    android:layout_below="@+id/accountListItem__body__text__id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/accountListItem__body__option__container"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/accountListItem__body__option__delete"
                    android:src="@drawable/delete_008"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:layout_marginEnd="10dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"/>

                <ImageButton
                    android:id="@+id/accountListItem__body__option__update"
                    android:src="@drawable/document_009"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:layout_width="45dp"
                    android:layout_height="45dp"/>

<!--                <Button-->
<!--                    android:id="@+id/accountListItem__body__option__update"-->
<!--                    android:text="@string/modify"-->
<!--                    android:background="@null"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->

            </LinearLayout>

        </RelativeLayout>

<!--        <RelativeLayout-->
<!--            android:id="@+id/accountListItem__footer__container"-->
<!--            android:layout_below="@+id/accountListItem__body__container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <TextView-->
<!--                android:id="@+id/accountListItem__footer__hint"-->
<!--                android:text="@string/hint"-->
<!--                android:textSize="14sp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->

<!--        </RelativeLayout>-->

    </RelativeLayout>

</RelativeLayout>