<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountAddActivity">

    <RelativeLayout
        android:id="@+id/accountAddActivity__container"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/accountAddActivity__header__status"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/accountAddActivity__header__status_back"
                android:src="@drawable/back_001"
                android:scaleType="fitXY"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/accountAddActivity__header__status_title"
                android:text="@string/add_account"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/accountAddActivity__body__account_container"
            android:layout_below="@+id/accountAddActivity__header__status"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/accountAddActivity__body__account_title_container"
                android:background="@drawable/border_5"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/accountAddActivity__body__account_title_icon"
                    android:src="@color/black"
                    android:scaleType="fitXY"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/accountAddActivity__body__account_title_label"
                    android:text="@string/title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/accountAddActivity__body__account_title_icon"
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/accountAddActivity__body__account_title_edit"
                    android:textSize="15sp"
                    android:textColor="@color/sexyBlack"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/accountAddActivity__body__account_title_label"
                    android:layout_marginStart="10dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/accountAddActivity__body__account_id_container"
                android:background="@drawable/border_5"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:layout_below="@+id/accountAddActivity__body__account_title_container"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/accountAddActivity__body__account_id_icon"
                    android:src="@color/black"
                    android:scaleType="fitXY"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/accountAddActivity__body__account_id_label"
                    android:text="@string/id"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/accountAddActivity__body__account_id_icon"
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/accountAddActivity__body__account_id_edit"
                    android:textSize="15sp"
                    android:textColor="@color/sexyBlack"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/accountAddActivity__body__account_id_label"
                    android:layout_marginStart="10dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/accountAddActivity__body__account_pw_container"
                android:background="@drawable/border_5"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:layout_below="@+id/accountAddActivity__body__account_id_container"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/accountAddActivity__body__account_pw_icon"
                    android:src="@color/black"
                    android:scaleType="fitXY"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/accountAddActivity__body__account_pw_label"
                    android:text="@string/pw"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/accountAddActivity__body__account_pw_icon"
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/accountAddActivity__body__account_pw_edit"
                    android:textSize="15sp"
                    android:textColor="@color/sexyBlack"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/accountAddActivity__body__account_pw_label"
                    android:layout_marginStart="10dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>