<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.JoinActivity">

    <RelativeLayout
        android:background="@drawable/join_image_001"
        android:alpha="0.7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/joinActivity__container"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/joinActivityHeader__container"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/joinActivityHeader__title"
                android:text="@string/sign_up"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/joinActivityHeader__subtitle"
                android:text="Sign Up Manager Your Account"
                android:textSize="26sp"
                android:layout_below="@+id/joinActivityHeader__title"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/joinActivityBody__container"
            android:layout_below="@+id/joinActivityHeader__container"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/joinActivityBody__input_id_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/joinActivityBody__input_id_order"
                    android:text="1"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/joinActivityBody__input_id_label"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/joinActivityBody__input_id_order"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/joinActivityBody__input_id_edit"
                    android:layout_toEndOf="@+id/joinActivityBody__input_id_label"
                    android:layout_marginStart="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/joinActivityBody__input_pw_container"
                android:layout_below="@+id/joinActivityBody__input_id_container"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/joinActivityBody__input_pw_order"
                    android:text="2"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/joinActivityBody__input_pw_label"
                    android:text="@string/password"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/joinActivityBody__input_pw_order"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/joinActivityBody__input_pw_edit"
                    android:inputType="textPassword"
                    android:layout_toEndOf="@+id/joinActivityBody__input_pw_label"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/joinActivityBody__input_pw2_container"
                android:layout_below="@+id/joinActivityBody__input_pw_container"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/joinActivityBody__input_pw2_order"
                    android:text="3"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:id="@+id/joinActivityBody__input_pw2_label_container"
                    android:layout_toEndOf="@+id/joinActivityBody__input_pw2_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/joinActivityBody__input_pw2_label"
                        android:text="@string/password"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/joinActivityBody__input_pw2_help"
                        android:layout_below="@+id/joinActivityBody__input_pw2_label"
                        android:text="(Password Again)"
                        android:textSize="12sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <EditText
                    android:id="@+id/joinActivityBody__input_pw2_edit"
                    android:inputType="textPassword"
                    android:layout_toEndOf="@+id/joinActivityBody__input_pw2_label_container"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/joinActivityBody__input_submit_container"
                android:layout_below="@+id/joinActivityBody__input_pw2_container"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/joinActivityBody__input_submit_btn"
                    android:text="@string/sign_up"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@drawable/gradation_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>